--- a/views/children/new.ejs
+++ b/views/children/new.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+<script type="text/javascript" src="/js/puppy.js"></script>
 <h1>Add a Child</h1>
 <a href= "/children"> See all children </a>
 
