Broke it then fixed it...Must commit and push every 10 min

--- a/views/parentUser/new.ejs
+++ b/views/parentUser/new.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<script type="text/javascript" src="/js/puppy.js"></script>
+<script type="text/javascript" src="/js/children.js"></script>
 <h1>Add a Child</h1>
 <a href= "/children"> See all children </a>
 
