--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -7,8 +7,7 @@
 <form method="POST" action="/signup" >
   <div class="form-group">
     <label for="userType"></label>
-      <br>
-      <input id= "userType" type="text" id="email" name="user[email]" class="form-control" autofocus>
+      <input id= "userType" type="text" name="user[userType]" class="form-control" autofocus>
   </div>
   <div class="form-group">
     <label for="user">Email:    </label>
