Got buttons to fill values of inputs when clicked

--- a/views/parentUser/show.ejs
+++ b/views/parentUser/show.ejs
@@ -20,8 +20,7 @@
     <td><%= child.interests %></td>
     <td><%= child.site %></td>
     <td><%= child.santa %></td>
-    <td class = "edit"><a href="/children/<%= child.id%>/edit">Edit</a></td>
-    <td class = "choose"><button type="button" class="btn btn-primary btn-xs">Choose <%= child.name%></button></td>
+    <td class = "edit"><a href="/children/<%= child.id%>/edit" class="btn btn-danger btn-xs">Edit</a></td>
     <td class= "delete"><form action="/children/<%= child.id %>?_method=delete" method= "POST"><input type="submit" value="Delete" class="btn btn-danger btn-xs"></form></td>
   </tr>
 </table>
