--- a/views/santaUser/edit.ejs
+++ b/views/santaUser/edit.ejs
@@ -20,8 +20,7 @@
     <td><%= child.interests %></td>
     <td><%= child.site %></td>
     <form action = "/children/<%=child.id%>?_method=put" method="POST">
-    <td><input type="text" name= "child[santa]" value= "<%= child.santa%>" class="form-control" id="santaInput" autofocus></td>
-    <td><button id= "chooseButton" class= "btn-primary btn- xs"> Choose Me! </button></td>
+    <td><input id="santaInput" type="text" name= "child[santa]" value= "<%=child.santa%>" class="form-control" autofocus></td>
   </tr>
 </tbody>
 </table>
@@ -29,6 +28,7 @@
 <input type="submit" value="Submit" class="btn btn-lg btn-success">
 <a href="/children" class="btn btn-lg btn-warning">Cancel</a>
 </form>
+<td><button id= "assignButton" class= "btn btn-primary btn-lg"> Choose Me! </button></td>
 
 
 
