--- a/views/santaUser/index.ejs
+++ b/views/santaUser/index.ejs
@@ -15,13 +15,13 @@
 <tbody>
 <% children.forEach(function(child){ %>
   <tr>
-    <td><a href="/children/<%= child.id%>/"><%= child.name%></a></td>
+    <td><a href="/children/<%= child.id%>/" class= "btn btn-primary-xs" ><%= child.name%></a></td>
   	<td><%= child.age %></td>
   	<td><%= child.needs %></td>
   	<td><%= child.interests %></td>
   	<td><%= child.site %></td>
   	<td><%= child.santa %></td>
-    <td><a href="/children/<%= child.id%>/">Choose Me!</a></td>
+    <td><a href="/children/<%= child.id%>/" class= "btn btn-primary btn-xs">Choose Me!</a></td>
   </tr>
 
 <% })%>
