--- a/views/santaUser/show.ejs
+++ b/views/santaUser/show.ejs
@@ -21,7 +21,7 @@
     <td><%= child.interests %></td>
     <td><%= child.site %></td>
     <td><%= child.santa %></td>
-    <td><a href= "/children/<%= child.id%>/edit"> Choose <%= child.name%></a></td>
+    <td><a href= "/children/<%= child.id%>/edit" class= "btn btn-primary btn-xs"> Choose <%= child.name%></a></td>
   </tr>
 </table>
 
