--- a/views/parentUser/edit.ejs
+++ b/views/parentUser/edit.ejs
@@ -23,7 +23,7 @@
     <input type="text" name= "child[site]" class="form-control" id="site" value = "<%=child.site%>" autofocus>
   </div>
 
-<input type="submit" value="Edit" class="btn btn-lg btn-success">
+<input type="submit" value="Save" class="btn btn-lg btn-success">
 <a href="/children" class="btn btn-lg btn-warning">Cancel</a>
 
 
