--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="/js/children.js"></script>
 </head>
 <body class = "container">
 
