Added physcis.js elements

--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,1 +1,43 @@
-<h1> Oops! Wrong page </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	
+	
+	
+</head>
+<body>
+<div id= "shiftSide">
+	<h1>Oops! The Page You Are Looking For Does Not Exist!</h1>
+	<p>Organize the presents neatly beneath the tree. Click and drag present to move. Release click to throw present. Click the background to add more presents under the tree.</p>
+
+</div>
+<style>html, body, #viewport { 
+					margin: 0; 
+					background: url("/images/ChristmasTreeBackground.jpg") no-repeat center center fixed;
+					-webkit-background-size: cover;
+  					-moz-background-size: cover;
+  					-o-background-size: cover;
+  					background-size: cover;
+					background-repeat: no-repeat; 
+					height: 100%; 
+					} 
+					.pjs-meta { color: #fff; }
+					canvas { 
+						position: absolute; 
+						top: 0; 
+						left: 0; 
+						right: 0; 
+						bottom: 0; }
+</style>
+<div id="viewport">
+	
+</div>
+
+<script type= "text/javascript" src= "/js/physicsjs-full.js"></script>
+<script type="text/javascript" src="/js/error.js"></script>
+<link rel="stylesheet" href='/css/stylesheet.css'>
+	
+</body>
+</html>
