--- a/views/parentUser/new.ejs
+++ b/views/parentUser/new.ejs
@@ -1,7 +1,12 @@
 <% include ../partials/header %>
-<script type="text/javascript" src="/js/children.js"></script>
-<h1>Add a Child</h1>
-<a href= "/children"> See all children </a>
+
+<div class= "jumbotron">
+  <h1>Add Your Child</h1>
+  <h1 id= "shiftLeft">To Santa's List</h1>
+  <div class= "link">
+    <a href = "/children">See All Children</a>
+  </div>
+</div>
 
 <form action = "/children" method="POST">
   <div class="form-group">
