--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,6 +1,16 @@
 <% include ../partials/header %>
-<script type="text/javascript" src="/js/children.js"></script>
-<h1>Sign up</h1>
+
+<div id="signuplogin" class= "jumbotron">
+  <h1>Welcome To Santa's Savors</h1>
+  <div class= "link">
+    <a href="/login">Already have an account? Login here</a>
+  </div>
+</div>
+
+<div id="signup">
+  <h1>Signup</h1>
+</div>
+
 <button id= "parentButton" class= "btn-primary btn- xs"> Parent </button>
 <button id= "santaButton" class= "btn-primary btn- xs"> Santa </button>
 <p>Are you a Parent or a Santa:  </p>
@@ -21,5 +31,5 @@
     <input type="submit" value="Sign up" class="btn btn-primary">
   </div>
 </form>
-<a href="/login">Already have an account? Login in here</a>
+
 <% include ../partials/footer %>
