--- a/views/parentUser/index.ejs
+++ b/views/parentUser/index.ejs
@@ -1,6 +1,14 @@
 <% include ../partials/header %>
-<h1>Santa Savors</h1>
-<a href = "/children/new">Add a Child</a>
+
+<div class= "jumbotron">
+  <h1>Santa's Savors</h1>
+  <div class= "link">
+    <a href = "/children/new">Add Your Child</a>
+  </div>
+</div>
+
+<p>Click On A Name For More Information</p>
+
 <table class= "table table-striped table-hover">
 <thead>
 	<tr>
