--- a/views/parentUser/show.ejs
+++ b/views/parentUser/show.ejs
@@ -1,6 +1,11 @@
 <% include ../partials/header %>
-<h1 class= "jumbotron">Learn About <%= child.name%></h1>
-<a href= "/children"> See all children </a>
+
+<div class= "jumbotron">
+  <h1>Learn About <%= child.name%></h1>
+  <div class= "link">
+    <a href= "/children"> See all children </a>
+  </div>
+</div>
 
 <table class= "table table-striped table-hover">
 <thead>
@@ -11,6 +16,8 @@
     <th>Interests</th>
     <th>Drop off Site</th>
     <th>Santa</th>
+    <th>Edit</th>
+    <th>Delete</th>
   </tr>
 </thead>
   <tr>
