--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
+  <link rel="stylesheet" href='/css/stylesheet.css'>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="/js/children.js"></script>
+  
 </head>
 <body class = "container">
+
+
 
