--- a/views/santaUser/index.ejs
+++ b/views/santaUser/index.ejs
@@ -1,5 +1,11 @@
 <% include ../partials/header %>
-<h1>Santa Savors</h1>
+
+<div class= "jumbotron">
+  <h1>Santa's Savors</h1>
+</div>
+
+<p>Click On A Name For More Information</p>
+
 <table class= "table table-striped table-hover">
 <thead>
 	<tr>
@@ -9,8 +15,10 @@
 		<th>Interests</th>
 		<th>Site</th>
 		<th>Santa</th>
+    <th>Sponser A Child</th>
 	</tr>
 </thead>
+
 
 <tbody>
 <% children.forEach(function(child){ %>
