--- a/views/santaUser/show.ejs
+++ b/views/santaUser/show.ejs
@@ -1,6 +1,10 @@
 <% include ../partials/header %>
-<h1 class= "jumbotron">Learn About <%= child.name%></h1>
-<a href= "/children"> See all children </a>
+<div class= "jumbotron">
+  <h1>Learn About <%= child.name%></h1>
+  <div class= "link">
+    <a href= "/children"> See all children </a>
+  </div>
+</div>
 
 <table class= "table table-striped table-hover">
 <thead>
