--- a/views/parentUser/edit.ejs
+++ b/views/parentUser/edit.ejs
@@ -29,8 +29,8 @@
     <input type="text" name= "child[site]" class="form-control" id="site" value = "<%=child.site%>" autofocus>
   </div>
 
-<input type="submit" value="Save" class="btn btn-lg btn-success">
-<a href="/children" class="btn btn-lg btn-warning">Cancel</a>
+<input type="submit" value="Save" class="btn btn-lg btn-green">
+<a href="/children" class="btn btn-lg btn-red">Cancel</a>
 
 
 </form>
@@ -40,5 +40,5 @@
 <br>
 
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
