--- a/views/parentUser/new.ejs
+++ b/views/parentUser/new.ejs
@@ -28,13 +28,20 @@
   <div class="form-group">
     <label for="site"> DropOff Site: </label>
     <select class = "form-control" name="child[site]" id="site" autofocus>
-      <option value="East Elementary">East Elementary</option>
-      <option value="Union Presbyterian Church">Union Presbyterian Church</option>
-      <option value="Castilleja School">Castilleja School</option>
-      <option value="Pinewood Middle Campus">Pinewood Middle Campus</option>
+      <option value="Mission Education Center ">Mission Education Center </option>
+      <option value="Kern Country Community School">Kern Country Community School</option>
+      <option value="San Joaquin Elementary School ">San Joaquin Elementary School </option>
+      <option value="Coliseum Elementary School">Coliseum Elementary School</option>
+      <option value="Loleta Grammar School ">Loleta Grammar School </option>
+      <option value="Nystrom Elementary">Nystrom Elementary</option>
+      <option value="Rise Elementary">Rise Elementary</option>
+      <option value="East Palo Alto Charter School">East Palo Alto Charter School</option>
+      <option value="Indian Valley Elementary">Indian Valley Elementary</option>
+      <option value="Rosa Parks Elementary">Rosa Parks Elementary</option>
+      <option value="Prairie Elementary">Prairie Elementary</option>
     </select>
   </div>
-<input type="submit" value="Add" class="btn btn-lg btn-success">
+<input type="submit" value="Add" class="btn btn-lg btn-green">
 </form>
 
 
@@ -42,5 +49,5 @@
 <br>
 
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
