--- a/views/santaUser/edit.ejs
+++ b/views/santaUser/edit.ejs
@@ -32,16 +32,13 @@
 </tbody>
 </table>
 
-<input type="submit" value="Submit" class="btn btn-lg btn-success">
-<a href="/children" class="btn btn-lg btn-warning">Cancel</a>
+<input type="submit" value="Submit" class="btn btn-lg btn-green">
+<a href="/children" class="btn btn-lg btn-red">Cancel</a>
 </form>
 
-
-
-
 <% include ../partials/footer %>
-<br>
+
 
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input id="shiftDown" type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
