--- a/views/santaUser/show.ejs
+++ b/views/santaUser/show.ejs
@@ -25,7 +25,7 @@
     <td><%= child.interests %></td>
     <td><%= child.site %></td>
     <td><%= child.santa %></td>
-    <td><a href= "/children/<%= child.id%>/edit" class= "btn btn-primary btn-xs"> Choose <%= child.name%></a></td>
+    <td><a href= "/children/<%= child.id%>/edit" class= "btn btn-gold btn-xs"> Choose <%= child.name%></a></td>
   </tr>
 </table>
 
@@ -33,5 +33,5 @@
 <br>
 
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
