--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,5 +1,12 @@
 <% include ../partials/header %>
 
+<div class= "jumbotron">
+  <h1>Welcome To Santa's Savors</h1>
+  <div class= "link">
+    <a href="/signup">Don't have an account? Sign up here</a>
+  </div>
+</div>
+
     <h2>Santa Savor</h2>
     <div class= "span4">
     	<p>Welcome to the Santa Savor where we strive to provide every child with the joy of opening a gift on Chirstmas Day.</p>
