--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -11,8 +11,8 @@
   <h1>Signup</h1>
 </div>
 
-<button id= "parentButton" class= "btn-primary btn- xs"> Parent </button>
-<button id= "santaButton" class= "btn-primary btn- xs"> Santa </button>
+<button id= "parentButton" class= "btn-red btn-lg"> Parent </button>
+<button id= "santaButton" class= "btn-green btn-lg"> Santa </button>
 <p>Are you a Parent or a Santa:  </p>
 <form method="POST" action="/signup" >
   <div class="form-group">
@@ -28,7 +28,7 @@
       <input type="password" id="pass" name="user[password]" class="form-control">
   </div>
   <div class="form-group">
-    <input type="submit" value="Sign up" class="btn btn-primary">
+    <input type="submit" value="Sign up" class="btn btn-gold">
   </div>
 </form>
 
