--- a/views/parentUser/index.ejs
+++ b/views/parentUser/index.ejs
@@ -9,8 +9,8 @@
 
 <p>Click On A Name For More Information</p>
 
-<table class= "table table-striped table-hover">
-<thead>
+<table id="searchDataTable" class= "table table-striped table-hover display">
+<thead id= "underline">
 	<tr>
 		<th>Name</th>
 		<th>Age</th>
@@ -19,12 +19,21 @@
 		<th>Site</th>
 		<th>Santa</th>
 	</tr>
+</tfoot>
+<tfoot>
+  <tr>
+    <th>Name</th>
+    <th>Age</th>
+    <th>Needs</th>
+    <th>Interests</th>
+    <th>Site</th>
+    <th>Santa</th>
+  </tr>
 </thead>
-
 <tbody>
 <% children.forEach(function(child){ %>
   <tr>
-    <td><a href="/children/<%= child.id%>/" class= "btn btn-primary-xs"><%= child.name%></a></td>
+    <td><a href="/children/<%= child.id%>/" class= "btn btn-dark"><%= child.name%></a></td>
   	<td><%= child.age %></td>
   	<td><%= child.needs %></td>
   	<td><%= child.interests %></td>
@@ -39,5 +48,5 @@
 <% include ../partials/footer %>
 <br>
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
