--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,19 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
-  <link rel="stylesheet" href='/css/stylesheet.css'>
+<link rel="stylesheet" href="/css/jquery.dataTables.css">
+ <link rel="stylesheet" href='/css/bootstrapStylesheet.css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
+ <link rel="stylesheet" href='/css/stylesheet.css'>
+  
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="/js/children.js"></script>
+  <script type="text/javascript" src="/js/jquery.dataTables.js"></script>
+
   
 </head>
 <body class = "container">
+<div id="left"></div>
+<div id="right"></div>
+<div id="top"></div>
+<div id="bottom"></div>
 
 
 
