--- a/views/santaUser/index.ejs
+++ b/views/santaUser/index.ejs
@@ -6,7 +6,8 @@
 
 <p>Click On A Name For More Information</p>
 
-<table class= "table table-striped table-hover">
+
+<table id= "searchDataTable" class= "table table-striped table-hover">
 <thead>
 	<tr>
 		<th>Name</th>
@@ -23,13 +24,13 @@
 <tbody>
 <% children.forEach(function(child){ %>
   <tr>
-    <td><a href="/children/<%= child.id%>/" class= "btn btn-primary-xs" ><%= child.name%></a></td>
+    <td><a href="/children/<%= child.id%>/" class= "btn btn-dark" ><%= child.name%></a></td>
   	<td><%= child.age %></td>
   	<td><%= child.needs %></td>
   	<td><%= child.interests %></td>
   	<td><%= child.site %></td>
   	<td><%= child.santa %></td>
-    <td><a href="/children/<%= child.id%>/" class= "btn btn-primary btn-xs">Choose Me!</a></td>
+    <td id= "gold"><a href="/children/<%= child.id%>/" class= "btn btn-gold btn-xs">Choose Me!</a></td>
   </tr>
 
 <% })%>
@@ -39,5 +40,5 @@
 <% include ../partials/footer %>
 <br>
 <form action="/logout">
-    <input type="submit" value="Logout" class="btn btn-primary btn-xs">
+    <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
