--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -20,7 +20,7 @@
     <label for="pass"> Password:</label>
       <input type="password" id="pass" name="user[password]" class="form-control">
   </div>
-  <input type="submit" value="Login" class="btn btn-primary">
+  <input type="submit" value="Login" class="btn btn-gold">
 </form>
 
 <% include ../partials/footer %>
