--- a/views/parentUser/new.ejs
+++ b/views/parentUser/new.ejs
@@ -18,6 +18,14 @@
     <input type="text" class="form-control" name="child[age]" id="age" autofocus>
   </div>
   <div class="form-group">
+    <label for="clothing"> Clothing Size: </label>
+    <input type="text" class="form-control" name="child[clothing]" id="clothing" autofocus>
+  </div>
+  <div class="form-group">
+    <label for="shoe"> Shoe Size: </label>
+    <input type="text" class="form-control" name="child[shoe]" id="shoe" autofocus>
+  </div>
+  <div class="form-group">
     <label for="needs"> Needs: </label>
     <input type="text" class="form-control" name="child[needs]" id="needs" autofocus>
   </div>
