--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,11 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/lumen/bootstrap.min.css">
  <link rel="stylesheet" href='/css/stylesheet.css'>
-  
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.20&signed_in=true"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="/js/children.js"></script>
   <script type="text/javascript" src="/js/jquery.dataTables.js"></script>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
   
 </head>
