--- a/views/santaUser/index.ejs
+++ b/views/santaUser/index.ejs
@@ -37,8 +37,14 @@
 
 </tbody>
 </table>
+<br>
+<p>Find Your Nearest Site Location Below</p>
+<br>
+
+<div id = "map-canvas"></div>
 <% include ../partials/footer %>
 <br>
 <form action="/logout">
     <input type="submit" value="Logout" class="btn btn-gold btn-m">
 </form>
+
